force-app/main/default/objects/SafetyPatrol__c/SafetyPatrol__c.object-meta.xml
<CustomObject>
    <label>安全パトロール</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>安全パトロール名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>