force-app/main/default/objects/SafetyPatrol__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>安全パトロール</relationshipLabel>
    <relationshipName>AccountSafetyPatrol</relationshipName>
    <type>Lookup</type>
</CustomField>