force-app/main/default/objects/SafetyPatrol__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>対象年度</label>
    <length>100</length>
    <type>Text</type>
</CustomField>