force-app/main/default/objects/SafetyPatrol__c/fields/inspector1__c.field-meta.xml
<CustomField>
    <fullName>inspector1__c</fullName>
    <label>１月_実施者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>