force-app/main/default/objects/SafetyPatrol__c/fields/inspector2__c.field-meta.xml
<CustomField>
    <fullName>inspector2__c</fullName>
    <label>２月_実施者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>