force-app/main/default/objects/SafetyPatrol__c/fields/inspector3__c.field-meta.xml
<CustomField>
    <fullName>inspector3__c</fullName>
    <label>3月_実施者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>