force-app/main/default/objects/SafetyPatrol__c/fields/schedule1__c.field-meta.xml
<CustomField>
    <fullName>schedule1__c</fullName>
    <label>１月_日程と時間帯</label>
    <type>TextArea</type>
</CustomField>