force-app/main/default/objects/SafetyPatrol__c/fields/schedule2__c.field-meta.xml
<CustomField>
    <fullName>schedule2__c</fullName>
    <label>２月_日程と時間帯</label>
    <type>TextArea</type>
</CustomField>