force-app/main/default/objects/SafetyPatrol__c/fields/schedule3__c.field-meta.xml
<CustomField>
    <fullName>schedule3__c</fullName>
    <label>３月_日程と時間帯</label>
    <type>TextArea</type>
</CustomField>